20% - Configurando o projeto e instalando o Struts2 com o Maven

--- a/treinaweb-teste-struts2/pom.xml
+++ b/treinaweb-teste-struts2/pom.xml
@@ -4,4 +4,27 @@
   <artifactId>treinaweb-teste-struts2</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
+  
+  <dependencies>
+  	<dependency>
+  		<groupId>org.apache.struts</groupId>
+  		<artifactId>struts2-core</artifactId>
+  		<version>2.3.28</version>
+  	</dependency>
+  </dependencies>
+  
+  <build>
+  	<finalName>TreinaWebStruts2Teste</finalName>
+  	<plugins>
+  		<plugin>
+  			<artifactId>maven-compiler-plugin</artifactId>
+  			<version>3.5.1</version>
+  			<configuration>
+  				<source>1.8</source>
+  				<target>1.8</target>
+  			</configuration>
+  		</plugin>
+  	</plugins>
+  </build>
+  
 </project>
